# MUTABLE

./: LICENSE  MUTABLE.opam  Makefile  dune-project  setup.sh
.github/workflows/: ci.yml
docs/: dune
lib/: architecture.ml  dune  logging.ml
test/: test.ml
