(lang dune 3.9)

(name MUTABLE)

(generate_opam_files true)

(source
 (github CharlesAverill/MUTABLE))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license LICENSE)

(documentation https://github.com/CharlesAverill/MUTABLE)

(package
 (name MUTABLE)
 (synopsis "MUlTiple AssemBly Language Emulator")
 (description "MUlTiple AssemBly Language Emulator")
 (depends ocaml dune graphics))

